[tool.poetry]
name = "decycle"
version = "2.0.1"
description = "Python circular imports resolver"
authors = ["user-with-username"]
license = "MIT"
readme = "README.md"
packages = [{include = "decycle"}]

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"