[project]
name = "decycle"
version = "3.0.0"
description = "Python circular imports resolver"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "user-with-username" }
]
requires-python = ">=3.7"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["decycle"]